--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MoviesDemo</string>
+    <string name="app_name">Movies</string>
     <string name="action_settings">Settings</string>
     <string name="movie_detail">Movies Detail</string>
     <string name="large_text">
